--- a/take-a-pet/main-page.html
+++ b/take-a-pet/main-page.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
         <meta charset="utf-8">
         <title>TAKE A PET</title>
         <link href="reset.css" rel="stylesheet" type="text/css">
@@ -14,46 +16,53 @@
                 <nav id="menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Como funciona</a></li>
+                    <li><a href="#">Quero adotar</a></li>
+                    <li><a href="#">Quero doar</a></li>
                 </nav>
             </header>
         </div>
         <div id="principal">
             <section id="apresentacao">
+                <img class="seta" src="./pictures/seta.png" alt="seta">
                 <h2>NOSSO PRINCIPAL OBJETIVO...</h2>
-                <p class=missao>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tellus condimentum ligula commodo, quis mattis ante molestie. Pellentesque ultrices rhoncus vehicula. Donec tristique iaculis mauris lobortis varius. Sed feugiat faucibus neque sed facilisis. Pellentesque tristique porta nulla non porta. Etiam imperdiet pharetra vestibulum. Suspendisse ullamcorper mi in vestibulum ultricies. Donec auctor, urna et suscipit maximus, nulla metus commodo nulla, ac bibendum dolor sem eu mauris. Nam est orci, tincidunt commodo dolor vitae, facilisis pulvinar turpis. Pellentesque finibus nisi quis orci cursus convallis. Nunc eget tempus nunc.</p>
-                <img src="./pictures/00.jpg" alt="pet">
+                <p class="missao">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tellus condimentum ligula commodo, quis mattis ante molestie. Pellentesque ultrices rhoncus vehicula. Donec tristique iaculis mauris lobortis varius. Sed feugiat faucibus neque sed facilisis. Pellentesque tristique porta nulla non porta. Etiam imperdiet pharetra vestibulum. Suspendisse ullamcorper mi in vestibulum ultricies. Donec auctor, urna et suscipit maximus, nulla metus commodo nulla, ac bibendum dolor sem eu mauris. Nam est orci, tincidunt commodo dolor vitae, facilisis pulvinar turpis. Pellentesque finibus nisi quis orci cursus convallis. Nunc eget tempus nunc.</p>
+                <img class="mainpicture" src="./pictures/collage.jpeg" alt="pet">
             </section>
             <section id="cadastro">
-                <h2>BORA SE CADASTRAR?</h2>
+                <h2>BORA PARTICIPAR?</h2>
                 <input class="bt" type="submit" value ="ADOTAR..." formaction="#"/>
                 <input class="bt" type="submit" value ="DOAR..." formaction="#"/>
             </section>
             <section id="historias">
+                <img class="seta" src="./pictures/seta.png" alt="seta">
                 <h2>HISTÓRIAS LINDAS...</h2>
-                <h3>Pets que encontraram um lar, uma família e muito amor!!!</h3>
-                <div class="pets-adotados">
-                    <img src="#" alt="Teddy">
-                    <p class="auctor">Teddy</p> 
-                    <p class="txt">Teddy foi encontrado nas ruas do Bairro X. Paula o achou...</p>
-                    <p class="txt-inf">Adotado dia XX de XXXX de XXXX</p>
-                </div>
-                <div class="pets-adotados">
-                    <img src="#" alt="name">
-                    <p class="auctor">Name</p>
-                    <p class="txt"></p>
-                    <p class="txt-inf">Adotado dia XX de XXXX de XXXX</p>
-                </div>
-                <div class="pets-adotados">
-                    <img src="#" alt="name">
-                    <p class="auctor">Name</p>
-                    <p class="txt"></p>
-                    <p class="txt-inf">Adotado dia XX de XXXX de XXXX</p>
-                </div>
-                <div class="pets-adotados">
-                    <img src="#" alt="name">
-                    <p class="auctor">Name</p>
-                    <p class="txt"></p>
-                    <p class="txt-inf">Adotado dia XX de XXXX de XXXX</p>
+                <h3>Alguns peludinhos que encontraram um lar, uma família e muito amor...</h3>
+                <img class="coracao" src="./pictures/coracao.png" alt="love">
+                <div class="historias-container">
+                    <div class="pets-adotados">
+                        <img src="./pictures/teddy.jpg" alt="Teddy">
+                        <p class="auctor">Teddy</p> 
+                        <p class="txt">Mini Historia...</p>
+                        <p class="txt">Adotado dia XX de XXXX de XXXX</p>
+                    </div>
+                    <div class="pets-adotados">
+                        <img src="./pictures/buddy.jpg" alt="name">
+                        <p class="auctor">Buddy</p>
+                        <p class="txt">Mini historinha...</p>
+                        <p class="txt">Adotado dia XX de XXXX de XXXX</p>
+                    </div>
+                    <div class="pets-adotados">
+                        <img src="./pictures/lady.jpg" alt="name">
+                        <p class="auctor">Lady</p>
+                        <p class="txt">Mini historinha...</p>
+                        <p class="txt">Adotado dia XX de XXXX de XXXX</p>
+                    </div>
+                    <div class="pets-adotados">
+                        <img src="./pictures/hunter.jpg" alt="name">
+                        <p class="auctor">Hunter</p>
+                        <p class="txt">Mini historinha...</p>
+                        <p class="txt">Adotado dia XX de XXXX de XXXX</p>
+                    </div>
                 </div>
             </section>
             <section id="frase-reflex">
