--- a/take-a-pet/main-page.html
+++ b/take-a-pet/main-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <link href="https://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
@@ -14,10 +14,12 @@
                 <h1>TAKE A PET</h1>
                 <img src="./pictures/dog-and-cat-in-pet-hotel.png" alt="icon">
                 <nav id="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Como funciona</a></li>
-                    <li><a href="#">Quero adotar</a></li>
-                    <li><a href="#">Quero doar</a></li>
+                    <ul>
+                        <li><a href="main-page.html">Home</a></li>
+                        <li><a href="como-funciona.html">Como funciona</a></li>
+                        <li><a href="#">Quero adotar</a></li>
+                        <li><a href="#">Quero doar</a></li>
+                    </ul>
                 </nav>
             </header>
         </div>
@@ -26,7 +28,7 @@
                 <img class="seta" src="./pictures/seta.png" alt="seta">
                 <h2>NOSSO PRINCIPAL OBJETIVO...</h2>
                 <p class="missao">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tellus condimentum ligula commodo, quis mattis ante molestie. Pellentesque ultrices rhoncus vehicula. Donec tristique iaculis mauris lobortis varius. Sed feugiat faucibus neque sed facilisis. Pellentesque tristique porta nulla non porta. Etiam imperdiet pharetra vestibulum. Suspendisse ullamcorper mi in vestibulum ultricies. Donec auctor, urna et suscipit maximus, nulla metus commodo nulla, ac bibendum dolor sem eu mauris. Nam est orci, tincidunt commodo dolor vitae, facilisis pulvinar turpis. Pellentesque finibus nisi quis orci cursus convallis. Nunc eget tempus nunc.</p>
-                <img class="mainpicture" src="./pictures/collage.jpeg" alt="pet">
+                <img class="mainpicture" src="./pictures/collage2.jpeg" alt="pet">
             </section>
             <section id="cadastro">
                 <h2>BORA PARTICIPAR?</h2>
