--- a/take-a-pet/main-page.html
+++ b/take-a-pet/main-page.html
@@ -12,13 +12,13 @@
         <div id="posicao-relativa">
             <header>
                 <h1>TAKE A PET</h1>
-                <img src="./pictures/dog-and-cat-in-pet-hotel.png" alt="icon">
+                <img src="./pictures/dog-and-cat.png" alt="icon">
                 <nav id="menu">
                     <ul>
                         <li><a href="main-page.html">Home</a></li>
                         <li><a href="como-funciona.html">Como funciona</a></li>
-                        <li><a href="#">Quero adotar</a></li>
-                        <li><a href="#">Quero doar</a></li>
+                        <li><a href="quero-adotar.html">Quero adotar</a></li>
+                        <li><a href="cadastrar-usuario">Quero doar</a></li>
                     </ul>
                 </nav>
             </header>
@@ -32,8 +32,8 @@
             </section>
             <section id="cadastro">
                 <h2>BORA PARTICIPAR?</h2>
-                <input class="bt" type="submit" value ="ADOTAR..." formaction="#"/>
-                <input class="bt" type="submit" value ="DOAR..." formaction="#"/>
+                <a href="quero-adotar.html"><input class="bt" type="submit" value ="ADOTAR..."/></a>
+                <a href="cadastrar-usuario.html"><input class="bt" type="submit" value ="DOAR..."/></a>
             </section>
             <section id="historias">
                 <img class="seta" src="./pictures/seta.png" alt="seta">
