take a pet final version

--- a/take-a-pet/main-page.html
+++ b/take-a-pet/main-page.html
@@ -18,7 +18,7 @@
                         <li><a href="main-page.html">Home</a></li>
                         <li><a href="como-funciona.html">Como funciona</a></li>
                         <li><a href="quero-adotar.html">Quero adotar</a></li>
-                        <li><a href="cadastrar-usuario">Quero doar</a></li>
+                        <li><a href="cadastrar-usuario.html">Quero doar</a></li>
                     </ul>
                 </nav>
             </header>
@@ -27,7 +27,7 @@
             <section id="apresentacao">
                 <img class="seta" src="./pictures/seta.png" alt="seta">
                 <h2>NOSSO PRINCIPAL OBJETIVO...</h2>
-                <p class="missao">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus tellus condimentum ligula commodo, quis mattis ante molestie. Pellentesque ultrices rhoncus vehicula. Donec tristique iaculis mauris lobortis varius. Sed feugiat faucibus neque sed facilisis. Pellentesque tristique porta nulla non porta. Etiam imperdiet pharetra vestibulum. Suspendisse ullamcorper mi in vestibulum ultricies. Donec auctor, urna et suscipit maximus, nulla metus commodo nulla, ac bibendum dolor sem eu mauris. Nam est orci, tincidunt commodo dolor vitae, facilisis pulvinar turpis. Pellentesque finibus nisi quis orci cursus convallis. Nunc eget tempus nunc.</p>
+                <p class="missao">Take a pet é um site sem fins lucrativos que visa ajudar a divulgar e promover cães, gatos e outros animais comunitários ou desabrigados através de uma maneira simples e rápida para que consigam achar um lar e uma família para amá-los!</p>
                 <img class="mainpicture" src="./pictures/collage2.jpeg" alt="pet">
             </section>
             <section id="cadastro">
@@ -43,27 +43,23 @@
                 <div class="historias-container">
                     <div class="pets-adotados">
                         <img src="./pictures/teddy.jpg" alt="Teddy">
-                        <p class="auctor">Teddy</p> 
-                        <p class="txt">Mini Historia...</p>
-                        <p class="txt">Adotado dia XX de XXXX de XXXX</p>
+                        <p class="auctor">Teddy</p>
+						<p class="txt">Adotado dia 31 de Janeiro de 2017.</p>
                     </div>
                     <div class="pets-adotados">
                         <img src="./pictures/buddy.jpg" alt="name">
                         <p class="auctor">Buddy</p>
-                        <p class="txt">Mini historinha...</p>
-                        <p class="txt">Adotado dia XX de XXXX de XXXX</p>
+                        <p class="txt">Adotado dia 12 de Abril de 2017.</p>
                     </div>
                     <div class="pets-adotados">
                         <img src="./pictures/lady.jpg" alt="name">
                         <p class="auctor">Lady</p>
-                        <p class="txt">Mini historinha...</p>
-                        <p class="txt">Adotado dia XX de XXXX de XXXX</p>
+                        <p class="txt">Adotada dia 14 de Abril de 2017.</p>
                     </div>
                     <div class="pets-adotados">
                         <img src="./pictures/hunter.jpg" alt="name">
                         <p class="auctor">Hunter</p>
-                        <p class="txt">Mini historinha...</p>
-                        <p class="txt">Adotado dia XX de XXXX de XXXX</p>
+                        <p class="txt">Adotado dia 20 de Março de 2017.</p>
                     </div>
                 </div>
             </section>
@@ -73,7 +69,7 @@
             </section>
         </div>
         <footer>
-			<p>Copyright &copy; 2017 ~ Take a pet ~ All Rights Reserved</p>
+			<p>Copyright &copy; 2017 ~ Take a pet ~ Talita e Yris ~ All Rights Reserved</p>
 		</footer>
     </body>
 </html>
