--- a/take-a-pet/cadastrar-usuario.html
+++ b/take-a-pet/cadastrar-usuario.html
@@ -9,7 +9,6 @@
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link href="style2.css" rel="stylesheet" type="text/css">
 	</head>
-	
 	<body>
 		<div id="posicao-relativa">
             <header>
@@ -20,62 +19,55 @@
 						<li><a href="main-page.html">Home</a></li>
 						<li><a href="como-funciona.html">Como funciona</a></li>
 						<li><a href="quero-adotar.html">Quero adotar</a></li>
-						<li><a href="cadastrar-pet.html">Quero doar</a></li>
+						<li><a href="cadastrar-usuario.html">Quero doar</a></li>
 					</ul>
                 </nav>
             </header>
         </div>	
-		
 		<div id="principal">
 			<img class="seta" src="./pictures/seta.png" alt="seta">
 			<h2>CADASTRO PESSOAL</h2>
-			<form action="http://www.meusite.com/script.php" method="get">
+			<form method="post" enctype="multipart/form-data" action="upload.asp">
 				<div class="cadastro-pessoal">
-				<div class="cad-pess">
-					<label for="txt-nome-pes">Nome: </label>
-					<input type="text" name="nome-pes" id="txt-nome-pes" />
-				</div>
-				<div class="cad-pess">
-					<label for="nmb-idade-pes">Idade: </label>
-					<input type="number" name="idade-pes" id="nmb-idade-pes" min="18"/>
-				</div>
-				<div class="cad-pess">
-					<label for="rd_Masc">Sexo: </label>
-					<input type="radio" name="sexo-cad-pes" id="rd_Masc" value="M" />Masculino
-					<input type="radio" name="sexo-cad-pes" id="rd_Fem" value="F" />Feminino
-				</div>
-				<div class="cad-pess">
-					<label for="txt_contato">Telefone para Contato: </label>
-					<input type="text" name="contato" id="txt_contato" />
-				</div>
-				<div class="cad-pess">
-					<label for="email">Email: </label>
-					<input type="email" name="email" id="email" />
-				</div>
-				<div class="cad-pess">
-					<label for="txt_regiao">Região: </label>
-					<select name="regiao" id="txt_regiao">
-						<option value="ZS">Zona Sul</option>
-						<option value="ZL">Zona Leste</option>
-						<option value="ZN">Zona Norte</option>
-						<option value="C">Centro</option>
-					</select>
-				</div>
-				<div class="cad-pess">
-					<label for="txt_endereco">Endereço: </label>
-					<input type="text" name="endereco" id="txt_endereco" />
-				</div>						
-				
-				<div class ="botoes">
-					<input class="bt" type="reset" value ="Redefinir" />
-					<input class="bt" type="submit" value ="Somente Me Cadastrar" />
-					<input class="bt" type="button" name="cadpet" onClick="window.location.href = 'cadastrar-pet.html';" value="Cadastrar Pet">
-				</div>
+					<div class="cad-pess">
+						<label for="txt-nome-pes">Nome: </label>
+						<input type="text" name="nome-pes" id="txt-nome-pes" />
+					</div>
+					<div class="cad-pess">
+						<label for="nmb-idade-pes">Idade: </label>
+						<input type="number" name="idade-pes" id="nmb-idade-pes" min="18"/>
+					</div>
+					<div class="cad-pess">
+						<label for="txt_contato">Telefone para Contato: </label>
+						<input type="text" name="contato" id="txt_contato" />
+					</div>
+					<div class="cad-pess">
+						<label for="email">Email: </label>
+						<input type="email" name="email" id="email" />
+					</div>
+					<div class="cad-pess">
+						<label for="txt_regiao">Região: </label>
+						<select name="regiao" id="txt_regiao">
+							<option value="ZS">Zona Sul</option>
+							<option value="ZL">Zona Leste</option>
+							<option value="ZN">Zona Norte</option>
+							<option value="C">Centro</option>
+						</select>
+					</div>
+					<div class="cad-pess">
+						<label for="txt_endereco">Endereço: </label>
+						<input type="text" name="endereco" id="txt_endereco" />
+					</div>						
+					<div class ="botoes">
+						<input class="bt" type="reset" value ="Redefinir" />
+						<input class="bt" type="submit" value ="Somente Me Cadastrar" />
+						<input class="bt" type="button" name="cadpet" onClick="window.location.href = 'cadastrar-pet.html';" value="Cadastrar Pet">
+					</div>
 				</div>
 			</form>
 		</div>
 		<footer>
-			<p>Copyright &copy; 2017 ~ Take a pet ~ All Rights Reserved</p>
+			<p>Copyright &copy; 2017 ~ Take a pet ~ Talita e Yris ~ All Rights Reserved</p>
 		</footer>
 	</body>
 </html>
